Styling: fixed odd layout bug in Firefox

--- a/assets/css/desktop.styl
+++ b/assets/css/desktop.styl
@@ -133,7 +133,6 @@ $bold-weight = 600
     li
       display flex
       flex-direction column
-      width 12rem
       min-height 8rem
       margin-bottom 2rem
       padding-left 0
